<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="Mvvm Imgur"/>

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/toolbar"
            android:checkedButton="@+id/radioButtonAll">
        <RadioButton android:id="@+id/radioButtonAll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/visible_type_all"
                     android:layout_weight="1"/>
        <RadioButton android:id="@+id/radioButtonOdd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/visible_type_odd"
                     android:layout_weight="1"/>
        <RadioButton android:id="@+id/radioButtonEven"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/visible_type_even"
                     android:layout_weight="1"/>
    </RadioGroup>

    <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewResult"/>

</RelativeLayout>